--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ function resolver() {
 <!-- ================= SECCIONES EXTRA ================= -->
 <section>
 <h2>Información teórica</h2>
-<p><a href="https://gamma.app/docs/Metodo-de-Gauss-Jordan-q26qgi34uenomqk?mode=doc" target="_blank">Abrir presentación teórica en Gamma</a></p>
+<p><a href="https://sistemas-ecuaciones-gaus-sdu75mu.gamma.site/" target="_blank">Abrir presentación teórica en Gamma</a></p>
 </section>
 
 <section>
@@ -434,3 +434,4 @@ int main() {
 </div>
 </body>
 </html>
+
